# hmsim

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.ctags.d/: python.ctags
.github/workflows/: ci.yml  package_windows.yml
docs/: CLI_Implementation_Plan.md  DEVELOPMENT.md  GUI_User_Guide.md  HMSim_File_Format.md  HM_File_Format_Migration_Plan.md  HM_ISA_Specification.md  HM_Software_Spec.md  Phase1_Implementation_Plan.md  Phase4_Implementation_Plan.md  Step_4_5_Implementation_Guide.md  Step_4_6_Implementation_Plan.md  Tutorial.md  consistency_test_plan.md  plan_memory_regions.md
docs/developer/: DEVELOPMENT.md  HM_Software_Spec.md  architecture_renaming_implementation_plan.md  implementation_plan_json_schema.md  indirect_syntax_implementation_plan.md
docs/reference/: HMSim_File_Format.md  HM_ISA_Specification.md
docs/user/: GUI_User_Guide.md  Tutorial.md  hmsim_User_Guide.md
examples/: add_two_numbers.hm  add_two_numbers.json  indirect_addressing.hm  multiply_two_numbers.hm  multiply_two_numbers.json  subroutine.hm
openspec/changes/archive/2026-03-21-enhance-markdown-renderer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-22-initial-main-specs/: proposal.md
openspec/changes/archive/2026-03-22-initial-main-specs/specs/isa-v1/: spec.md
openspec/changes/archive/2026-03-22-replace-gtk-about-dialog/: design.md  proposal.md  tasks.md
openspec/changes/initial-main-specs/: design.md  tasks.md
openspec/changes/initial-main-specs/specs/isa-v2/: spec.md
openspec/changes/initial-main-specs/specs/isa-v3/: spec.md
openspec/changes/replace-gtk-about-dialog/specs/about-dialog/: spec.md
openspec/specs/enhanced-markdown-styling/: spec.md
openspec/specs/hm-engine/: spec.md
openspec/specs/hmsim-cli/: spec.md
openspec/specs/hmsim-gui/: spec.md
openspec/specs/isa-v1/: spec.md
openspec/specs/isa-v2/: spec.md
openspec/specs/isa-v3/: spec.md
openspec/specs/isa-v4/: spec.md
scripts/: __init__.py  build_gui.py
src/hmsim/: __init__.py
src/hmsim/engine/: cpu.py  isa.py  report.py  schema.json  state.py
src/hmsim/engine/strategies/: __init__.py
src/hmsim/gui/: __init__.py  hm_gui.py  main_window.py  settings_manager.py  state_manager.py
src/hmsim/gui/controllers/: file_controller.py  simulation_controller.py
src/hmsim/gui/utils/: __init__.py  markdown_renderer.py
src/hmsim/gui/widgets/: __init__.py  about_dialog.py  editor_view.py  file_dialog.py  help_window.py  memory_view.py  register_view.py  setup_dialog.py
src/hmsim/tools/: hmasm.py  hmdas.py  hmsim_cli.py
tests/fixtures/: sample_state.hm  sample_state.json
tests/integration/: test_consistency.py
tests/unit/: __init__.py  test_cli_report.py  test_cpu.py  test_disassembler.py  test_engine_integration.py  test_hmv3.py  test_hmv4.py  test_indirect_syntax.py  test_json_state.py  test_main_window.py  test_version_handling.py
tests/unit/gui/: __init__.py  conftest.py  test_architecture.py  test_controls.py  test_editor.py  test_editor_memory_sync.py  test_feedback.py  test_file_dialog_flow.py  test_io.py  test_markdown_renderer.py  test_memory_editor_sync.py  test_menubar.py  test_setup.py  test_setup_dialog.py  test_simulation.py  test_snapshot_hashing.py  test_version.py
(+5 files in other folders)
