[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmsim"
dynamic = ["version"]
description = "Multi-version simulator for HM 16-bit processor family"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "jsonschema>=4.0.0",
]
authors = [
    {name = "Khairulmizam Samsudin", email = "xource@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

gui = [
    "PyGObject>=3.44",
    "markdown-it-py>=3.0.0",
]

all = [
    "PyGObject>=3.44",
    "markdown-it-py>=3.0.0",
    "pytest>=7.0",
]

[project.scripts]
hmsim_cli = "hmsim.tools.hmsim_cli:main"
hmsim = "hmsim.gui.hm_gui:main"
hmasm = "hmsim.tools.hmasm:main"
hmdas = "hmsim.tools.hmdas:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hmsim*", "hmsim.engine.*"]

[tool.setuptools.package-data]
hmsim = ["engine/*.json"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/hmsim/_version.py"
